Subimos los cambios

--- a/src/views/calculator/calculator.css
+++ b/src/views/calculator/calculator.css
@@ -22,8 +22,15 @@
 
 .constellation{
  border-radius: 10px;
+    width: 30vh;
 }
 
 .constellation:hover{
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .constellation{
+        width: 25vh;
+    }
 }
