--- a/src/components/tableCalculator/tableCalculator.css
+++ b/src/components/tableCalculator/tableCalculator.css
@@ -9,7 +9,12 @@
     margin-bottom: 0;
 }
 
-.table-striped thead th {
+.table-striped  th{
   position: sticky;
   top: 0;
+  z-index: 1020;
+}
+
+tr {
+  font-size: 1.1rem;
 }
