--- a/src/views/QAMVisualizer/QAMVisualizer.css
+++ b/src/views/QAMVisualizer/QAMVisualizer.css
@@ -36,20 +36,20 @@
   }
   
   .plot-container {
-    max-width: 100%;  
-    /* border: 1px solid var(--secondary-color); */
+    max-height: 70vh;
   }
-  
+
+
   @media (max-width: 768px) {
     .plot-container {
-      width: 90%;
-      height: 300px;
+      width: 100%;
+      height: 400px;
     }
   }
   
   @media (max-width: 480px) {
     .plot-container {
-      width: 100%;
-      height: 250px;
+      width: 95%;
+      height: 400px;
     }
   }
