Arreglamos un par de cosas

--- a/src/views/calculator/calculator.css
+++ b/src/views/calculator/calculator.css
@@ -23,9 +23,11 @@
 .constellation{
  border-radius: 10px;
     width: 30vh;
+    transition: 200ms ease-in;
 }
 
 .constellation:hover{
+    transform: scale(1.05,1.05);
     cursor: pointer;
 }
 
