Agregamos para descargar manual de usuario

--- a/src/common/footer/footer.css
+++ b/src/common/footer/footer.css
@@ -35,3 +35,11 @@
     color: #25d366;
     cursor: pointer;
 }
+
+.download{
+    text-decoration: none;
+}
+
+.logoDownload{
+    font-size: 23px;
+}
