--- a/src/common/footer/footer.css
+++ b/src/common/footer/footer.css
@@ -15,6 +15,10 @@
     margin: 0 10px;
 }
 
+.igLogo:hover{
+    color: rgb(148, 0, 148);
+    cursor: pointer;
+}
 
 .lkLogo:hover{
     color:  #0e76a8;
